<resources>
    <string name="app_name">BaseMVPKotlin</string>
    <string name="share">Share</string>
    <string name="dataError">Can not load data. Please try again</string>
    <string name="no_data">Data not found. Please try again.</string>

    <string name="navigation_top_headline">Top Headline</string>
    <string name="navigation_news">News</string>
    <string name="navigation_profile">Profile</string>

    <string name="add_photo">Add Photo</string>
    <string name="personal">Personal</string>
    <string name="display_name">Display name</string>
    <string name="name">User name</string>
    <string name="mobile_number">Mobile number</string>
</resources>
